packages/kyvernoPolicies/chart/tests/vpol/disallow-deprecated-apis-cel/chainsaw-test/ingress-good.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: good-ingress
spec:
  defaultBackend:
    service:
      name: fake
      port:
        number: 80
