packages/kyvernoPolicies/chart/tests/vpol/disallow-deprecated-apis-cel/chainsaw-test/policy-ready.yaml
apiVersion: policies.kyverno.io/v1
kind: ValidatingPolicy
metadata:
  name: disallow-deprecated-apis-cel
status:
  conditionStatus:
            (conditions[?type == 'RBACPermissionsGranted']):
            - message: Policy is ready for reporting.
              reason: Succeeded
              status: "True"
            (conditions[?type == 'WebhookConfigured']):
            - message: Webhook configured.
              reason: Succeeded
              status: "True"
              type: WebhookConfigured
